Syntax fixing + gitignore update

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 basic_nn/mnist_test.csv.zip
 things to read
 Working resume.docx
+~$rking resume.docx
+Microsoft internship.pdf
+Resume.pdf
+resume_Most_recent.pdf
+temp.pdf
